2005-09-23  Rodney Dawes  <dobey@novell.com>

	* 16x16/stock/emoticons/Makefile.am: Install these into the gnome
	icon theme directory and not the hicolor theme directory

	Fixes http://bugzilla.novell.com/show_bug.cgi?id=91387

2005-09-08  Jakub Steiner <jimmac@ximian.com>

	* scalable/apps/volume-knob.svg: forgot to add

2005-09-07  Jakub Steiner <jimmac@ximian.com>

	* 24x24/apps/evolution.png: make the envelope larger.

2005-09-06  Jakub Steiner <jimmac@ximian.com>

	* volume-knob: remove 48x48, replace with an SVG and provide the
	  16x16 and 24x24 bitmaps. Fixes bug #308160.
	
2005-09-04  Rodney Dawes  <dobey@novell.com>

	* NEWS:
	* configure.in: Update for 2.12.0 release

	* 16x16/stock/net/Makefile.am (install-data-local):
	Fix an issue with Tor's patch that caused a missing separator error

2005-09-04  Tor Lillqvist  <tml@novell.com>

	* 16x16/stock/net/Makefile.am (install-data-local):
	* 24x24/stock/net/Makefile.am (install-data-local):
	* 48x48/mimetypes/Makefile.am (install-data-hook):
	Create icondir before installing into it.
	No / between $(DESTDIR) and $(icondir).

2005-09-03  Jakub Steiner <jimmac@ximian.com>

	* scalable/apps/Makefile.am: this actually goes to hicolor
	* 24x24/apps/evolution.png: updated
	* 32x32/apps/evolution.png: removed

2005-08-26  Jakub Steiner <jimmac@ximian.com>

	* index.theme.in: also make 48x48 filesystems 
	  scalable (as per bug #314346
	
2005-08-22  Rodney Dawes  <dobey@novell.com>

	* NEWS:
	* configure.in: Update for 2.11.92 release

2005-08-15  Jakub Steiner <jimmac@ximian.com>

	* {16x16,24x24,48x48}/apps/image-viewer.png: generic image view
	icon. bug #167087
	
2005-08-15  Jakub Steiner <jimmac@ximian.com>

	* index.theme.in: while it looks crap, I don't have the motivation
	to create all the missing 16x16 and 24x24 versions, so let's bring
	the 48x48 scaled bluriness back. fixes bug #313052

2005-08-15  Jakub Steiner <jimmac@ximian.com>
