@@ -7,6 +7,12 @@ icondir = $(datadir)/icons/hicolor/$(iconsize)/$(category)/$(subtype)
 
 icon_DATA =\
    stock_sound.png \
+	 stock_volume.png \
+	 stock_volume-0.png \
+	 stock_volume-max.png \
+	 stock_volume-med.png \
+	 stock_volume-min.png \
+	 stock_volume-mute.png \
 	$(NULL)
 
 EXTRA_DIST = $(icon_DATA)
