@@ -1,3 +1,12 @@
+2005-10-02  Jakub Steiner <jimmac@ximian.com>
+
+	* stock_volume.png:
+	* stock_volume-0.png:
+	* stock_volume-max.png:
+	* stock_volume-med.png:
+	* stock_volume-min.png:
+	* stock_volume-mute.png: new volume applet icons at 32x32px
+
 2005-09-23  Rodney Dawes  <dobey@novell.com>
 
 	* 16x16/stock/emoticons/Makefile.am: Install these into the gnome
